--- a/.github/workflows/master_lab5nb.yml
+++ b/.github/workflows/master_lab5nb.yml
@@ -24,12 +24,13 @@ jobs:
 
       - name: Build with dotnet
         run: dotnet build --configuration Release
+
       - name: dotnet publish
         run: dotnet publish -c Release -o ${{env.DOTNET_ROOT}}/myapp
         - name: dotnet installef
         run: dotnet tool install -g dotnet-ef
         -name: dotnet bundle migration
-        run: dotnet ef migration bundle --runtime linux-x64 -p Lab5GursharanTatla/Lab5GursharanTatla.csproj -0 \${{env.DOTNET_ROOT}}/myapp/migrate  
+        run: dotnet ef migration bundle --runtime linux-x64 -p Lab5GursharanTatla/Lab5GursharanTatla.csproj -o \${{env.DOTNET_ROOT}}/myapp/migrate  
       - name: Upload artifact for deployment job
         uses: actions/upload-artifact@v3
         with:
