--- a/.github/workflows/master_lab5nb.yml
+++ b/.github/workflows/master_lab5nb.yml
@@ -28,9 +28,9 @@ jobs:
       - name: dotnet publish
         run: dotnet publish -c Release -o ${{env.DOTNET_ROOT}}/myapp
       - name: dotnet installef
-        run: dotnet tool install -g dotnet-ef
-      -name: dotnet bundle migration
-        run: dotnet ef migration bundle --runtime linux-x64 -p Lab5GursharanTatla/Lab5GursharanTatla.csproj -o \${{env.DOTNET_ROOT}}/myapp/migrate  
+        run: donet tool install -g dotnet-ef
+      - name: dotnet bundle migration
+        run: dotnet ef migrations bundle --runtime linux-x64 -p DotNetCoreSqlDb/DotNetCoreSqlDb.csproj -o ${{env.DOTNET_ROOT}}/myapp/migrate
       - name: Upload artifact for deployment job
         uses: actions/upload-artifact@v3
         with:
