--- a/.github/workflows/master_lab5nb.yml
+++ b/.github/workflows/master_lab5nb.yml
@@ -28,7 +28,7 @@ jobs:
       - name: dotnet publish
         run: dotnet publish -c Release -o ${{env.DOTNET_ROOT}}/myapp
       - name: dotnet installef
-        run: donet tool install -g dotnet-ef
+        run: dotnet tool install -g dotnet-ef
       - name: dotnet bundle migration
         run: dotnet ef migrations bundle --runtime linux-x64 -p Lab5GursharanTatla/Lab5GursharanTatla.csproj -o ${{env.DOTNET_ROOT}}/myapp/migrate
       - name: Upload artifact for deployment job
