--- a/Lab5GursharanTatla/appsettings.json
+++ b/Lab5GursharanTatla/appsettings.json
@@ -1,6 +1,6 @@
 {
   "ConnectionStrings": {
-    "AZURE_POSTGRESQL_CONNECTIONSTRING": "Server=(localdb)\\mssqllocaldb;Database=Lab5Gursharan;Trusted_Connection=True;MultipleActiveResultSets=true;"
+    "AZURE_POSTGRESQL_CONNECTIONSTRING": "Server=lab5nb-server.postgres.database.azure.com;Database=lab5nb-database;Port=5432;Ssl Mode=Require;User Id=gxtjxqrzwd;Password=G32UPAXDZ1V8UX5R$;"
   },
   "Logging": {
     "LogLevel": {
